# haroon-mart-project2

./: docker-compose.yml  gateway-startup.sh
inventory_service/: .env  Dockerfile.dev
inventory_service/app/: main.py  order_pb2.py  product.proto  product_pb2.py
inventory_service/app/cosumers/: add_inventory_cosumer.py  order_cosumer.py
inventory_service/app/crud/: inventory_crud.py
inventory_service/app/models/: inventory_models.py  order_models.py
microservice_02/app/: main.py
order_service/: .env  Dockerfile.dev  pyproject.toml
order_service/app/: dependency.py  main.py  order.proto  settings.py
order_service/app/cosumers/: add_order_cosumer.py
order_service/app/crud/: order_crud.py
order_service/app/models/: order_models.py
product_service/: .env  Dockerfile.dev  pyproject.toml
product_service/app/: db.py  inventory.proto  inventory_pb2.py  main.py  order_pb2.py  product.proto  product_pb2.py
product_service/app/consumers/: inventory_cosumer.py  order_cosumer.py  product_consumer.py
product_service/app/crud/: product_crud.py
product_service/app/models/: inventory_models.py  order_models.py  product_models.py
todo/: .env
todo/app/: main.py
