[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["Haroon Afzal <haroonafzal741@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.1"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"
psycopg-binary = "^3.2.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
